# pydantic-construct

./: README.md  pyproject.toml  tasks.py
.github/workflows/: publish.yml
src/pydantic_construct/: __init__.py  base.py
tests/: test_construct_base_model.py  test_omission_metadata.py
