[project]
name = "pydantic-construct"
version = "0.1.1"
description = "Interfaces between construct and Pydantic to allow typed serializing to bytes."
keywords = ["pydantic", "construct", "binary", "serializing"]
authors = [
  {name = "Jay184", email = "me@jay0.mozmail.com"},
]
maintainers = [
  {name = "Jay184", email = "me@jay0.mozmail.com"},
]
license = "0BSD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "construct>=2.10.70",
    "construct-typing>=0.7.0",
    "pydantic>=2.12.5",
]

[project.urls]
Repository = "https://github.com/Jay184/pydantic-construct.git"
Issues = "https://github.com/Jay184/pydantic-construct/issues"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "invoke>=2.2.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-randomly>=4.0.1",
    "hypothesis>=6.151.10",
    "ruff>=0.15.8",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
